--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "icons": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-grid-gallery": "^0.5.5",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
